[build-system]
requires = ["hatchling >= 1.26", "numpy>=1.17.3", "pyqubo==1.5.0", "scipy>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "pyhubo"
version = "1.0.0"
authors = [
  { name="Frederik Koch", email="frederik.koch@uni-hamburg.de" },
]
description = "A python package for resource-efficient quantum optimization"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "http://frederikkoch.com"
Issues = "http://frederikkoch.com"